# ExSincroniaEngine

./: .gitignore  CMakeLists.txt  README.md
Presentaciones/: TemaDeInvestigacion.pptx
docs/html/: _animation_clip_8cpp.html  _animation_clip_8hpp.html  _animation_clip_8hpp_source.html  _animation_clip_manager_8cpp.html  _animation_clip_manager_8hpp.html  _animation_clip_manager_8hpp_source.html  _application_8cpp.html  _application_8hpp.html  _application_8hpp_source.html  _assimp_transformations_8hpp.html  _assimp_transformations_8hpp_source.html  _audio_system_8cpp.html  _audio_system_8hpp.html  _audio_system_8hpp_source.html  _camera_8hpp.html  _camera_8hpp_source.html  _common_8cpp.html  _common_8hpp.html  _common_8hpp_source.html  _component_types_8hpp.html  _component_types_8hpp_source.html  _devices_8cpp.html  _devices_8hpp.html  _devices_8hpp_source.html  _frame_stabilizer_8hpp.html  _frame_stabilizer_8hpp_source.html  _game_object_8hpp.html  _game_object_8hpp_source.html  _game_object_manager_8cpp.html  _game_object_manager_8hpp.html  _game_object_manager_8hpp_source.html  _game_window_8cpp.html  _game_window_8hpp.html  _game_window_8hpp_source.html  _joystick_8hpp.html  _joystick_8hpp_source.html  _mesh_8cpp.html  _mesh_8hpp.html  _mesh_8hpp_source.html  _model_8hpp.html  (+325 more)
docs/latex/: _animation_clip_8cpp.tex  _animation_clip_8hpp.tex  _animation_clip_8hpp_source.tex  _animation_clip_manager_8cpp.tex  _animation_clip_manager_8hpp.tex  _animation_clip_manager_8hpp_source.tex  _application_8cpp.tex  _application_8hpp.tex  _application_8hpp_source.tex  _assimp_transformations_8hpp.tex  _assimp_transformations_8hpp_source.tex  _audio_system_8cpp.tex  _audio_system_8hpp.tex  _audio_system_8hpp_source.tex  _camera_8hpp.tex  _camera_8hpp_source.tex  _common_8cpp.tex  _common_8hpp.tex  _common_8hpp_source.tex  _component_types_8hpp.tex  _component_types_8hpp_source.tex  _devices_8cpp.tex  _devices_8hpp.tex  _devices_8hpp_source.tex  _frame_stabilizer_8hpp.tex  _frame_stabilizer_8hpp_source.tex  _game_object_8hpp.tex  _game_object_8hpp_source.tex  _game_object_manager_8cpp.tex  _game_object_manager_8hpp.tex  (+192 more)
source/: Application.hpp  CMakeLists.txt
source/Devices/: CMakeLists.txt  Joystick.hpp
source/GameWindow/: CMakeLists.txt  GameWindow.hpp
source/Rendering/: CMakeLists.txt  Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  helloworld.hpp
source/Time/: CMakeLists.txt  Timer.hpp
(+146 files in other folders)
